Styling the quote section

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     </div>
     
     <div class="quote-container">
-        <div class="quote-text">This section going to have cool meow moew quotes</div>
-        <div class="quote-name">Xeodo</div>
+        <div class="quote-text">This section going to have cool meow moew quotes. This going have so much awesome quote that everyone is going to be so happy and motivated</div>
+        <div class="quote-name">-Xeodo</div>
     </div>
     
     <div class="ad-container">
